class Settings():
    """Configuracoes do jogo definidas/ajustadas atraves do Menu (volume, idioma, controles)."""
    def __init__(self):
        self.music_volume = 0.5
        self.sfx_volume = 0.7
        self.language = "pt-br"
        self.keybindings = {}
